added custom fonts and improved overall style

--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        main {
+            display: block;
+        }
+    </style>
     <title>Contact</title>
     <link rel="icon" href="icon.png" type="image/png">
 </head>
 <body>
     <header>
+        <h1>Lukas Gliniorz</h1>
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
@@ -18,9 +25,9 @@
         </nav>
     </header>
     <main>
-        <h1>Contact</h1>
+        <h2>Contact</h2>
         <section>
-            <h2>Address</h2>
+            <h3>Address</h3>
             <p>
                 Lukas Gliniorz<br>
                 Hofangerstraße 169<br>
@@ -29,7 +36,7 @@
         </section>
         <hr>
         <section>
-            <h2>Contact form</h2>
+            <h3>Contact form</h3>
             <form action="submit.php" method="post">
                 <fieldset>
                     <legend>Contact information</legend>
