--- a/downloads.html
+++ b/downloads.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        main {
+            display: block;
+        }
+    </style>
     <title>Downloads</title>
     <link rel="icon" href="icon.png" type="image/png">
 </head>
 <body>
     <header>
+        <h1>Lukas Gliniorz</h1>
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
@@ -18,22 +25,24 @@
         </nav>
     </header>
     <main>
-        <h1>Downloads</h1>
-        <p>Please select the files you want to download:</p>
-        <label for="file">File:</label>
-        <select id="file" name="file">
-            <optgroup label="Education">
-                <option>CV</option>
-                <option>Transcript of Records</option>
-                <option>Picture</option>
-            </optgroup>
-            <optgroup label="Work Experience">
-                <option>Reference letter MAN</option>
-                <option>Reference letter Trumpf</option>
-                <option>Reference letter Widmann</option>
-            </optgroup>
-        </select>
-        <button>Download</button>
+        <section>
+            <h2>Downloads</h2>
+            <p>Please select the files you want to download:</p><br>
+            <label for="file">File:</label>
+            <select id="file" name="file">
+                <optgroup label="Education">
+                    <option>CV</option>
+                    <option>Transcript of Records</option>
+                    <option>Picture</option>
+                </optgroup>
+                <optgroup label="Work Experience">
+                    <option>Reference letter MAN</option>
+                    <option>Reference letter Trumpf</option>
+                    <option>Reference letter Widmann</option>
+                </optgroup>
+            </select>
+            <button>Download</button>
+        </section>
     </main>
     <footer>
         <p>Made by Lukas Gliniorz, 2023</p>
