--- a/experiments.html
+++ b/experiments.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        main {
+            display: block;
+        }
+    </style>
     <title>Experiments</title>
     <link rel="icon" href="icon.png" type="image/png">
 </head>
 <body>
     <header>
+        <h1>Lukas Gliniorz</h1>
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
@@ -18,7 +25,7 @@
         </nav>
     </header>
     <main>
-        <h1>Experiments</h1>
+        <h2>Experiments</h2>
         <pre><code>
             function HelloWorld() {
                 console.log("Hello World");
