--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <style>
+    <!-- <style>
         main {
             display: block;
         }
-    </style>
+    </style> -->
     <title>Contact</title>
     <link rel="icon" href="icon.png" type="image/png">
 </head>
@@ -16,7 +16,9 @@
     <header>
         <h1>Lukas Gliniorz</h1>
         <nav>
-            <ul>
+            <label for="toggle-1" class="toggle-menu">Menu</label>
+            <input type="checkbox" id="toggle-1"/>
+            <ul list-style: none>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/downloads.html">Downloads</a></li>
                 <li><a href="/contact.html">Contact</a></li>
@@ -25,18 +27,16 @@
         </nav>
     </header>
     <main>
-        <h2>Contact</h2>
         <section>
-            <h3>Address</h3>
+            <h2>Contact</h2>
             <p>
                 Lukas Gliniorz<br>
                 Hofangerstraße 169<br>
                 81735 München
             </p>            
         </section>
-        <hr>
         <section>
-            <h3>Contact form</h3>
+            <h2>Contact form</h2>
             <form action="submit.php" method="post">
                 <fieldset>
                     <legend>Contact information</legend>
