--- a/index.html
+++ b/index.html
@@ -39,38 +39,15 @@
         <section id="education">
             <h2>Education</h2>
             <h3>University of California, San Diego</h3>
-            <table>
-                <caption>I take the following courses this quarter:</caption>
-                <colgroup>
-                    <col span="3">
-                </colgroup>
-                <tr>
-                    <th>Course</th>
-                    <th>Name</th>
-                    <th>Units</th>
-                </tr>
-                <tr>
-                    <td>CSE 134B</td>
-                    <td>Web Client Languages</td>
-                    <td>4</td>
-                </tr>
-                <tr>
-                    <td>CSE 190</td>
-                    <td>Topics in Computer Science and Engineering</td>
-                    <td>4</td>
-                </tr>
-                <tr>
-                    <td>DSC 30</td>
-                    <td>Data Structures and Algorithms for Data Science</td>
-                    <td>4</td>
-                </tr>
-            </table>
+            <p>Exchange semester at University of California, San Diego from September 2023 to December 2023. I am taking classes on Web Client Language, Data Structures
+                and Wireless Embedded Systems.
+            </p><br>
 
             <h3>Aston University, Birmingham</h3>
             <p><b>Exchange semester </b>at <strong>Aston University</strong> from September 2020 to January 2021.</p>
             
-            <img src="aston.jpg" alt="campus of Technical University of Munich">
-            <aside>I took courses in Advanced Programming, ...</aside>
+            <img src="aston.jpg" alt="campus of Aston University">
+            <p>I took courses in Advanced Programming, ...</p>
             <audio src="gb.mp3" controls>
                 Your browser does not support the audio tag.
             </audio>
@@ -80,7 +57,7 @@
             </p>
             <picture>
                 <source type="image/webp" srcset="tum.webp">
-                <img src="tum.webp" alt="campus of Aston University">
+                <img src="tum.webp" alt="campus of Technical University of Munich" style="object-fit: cover; object-position: center;">
             </picture>
             <video src="tum.mp4" width="640" height="360" controls>
                 Your browser does not support the video tag.
@@ -145,11 +122,7 @@
                 <li>PA for the course Software Development for Engineers</li>
                 <li>Onboard courier for stem cells</li>
             </ol>
-        </section>        
-        <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2661.9894820908016!2d11.565215217443841!3d48.14900800000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479e7261336d8c11%3A0x79a04d44dc5bf19d!2sTechnische%20Universit%C3%A4t%20M%C3%BCnchen!5e0!3m2!1sde!2sus!4v1697936996208!5m2!1sde!2sus" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-
+        </section>
     </main>
     <aside>
 
