--- a/experiments.html
+++ b/experiments.html
@@ -16,7 +16,9 @@
     <header>
         <h1>Lukas Gliniorz</h1>
         <nav>
-            <ul>
+            <label for="toggle-1" class="toggle-menu">Menu</label>
+            <input type="checkbox" id="toggle-1"/>
+            <ul list-style: none>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/downloads.html">Downloads</a></li>
                 <li><a href="/contact.html">Contact</a></li>
