--- a/downloads.html
+++ b/downloads.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" media="all" type="text/css">
     <style>
         main {
             display: block;
@@ -17,8 +17,8 @@
         <h1>Lukas Gliniorz</h1>
         <nav>
             <label for="toggle-1" class="toggle-menu">Menu</label>
-            <input type="checkbox" id="toggle-1"/>
-            <ul list-style: none>
+            <input type="checkbox" id="toggle-1">
+            <ul>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/downloads.html">Downloads</a></li>
                 <li><a href="/contact.html">Contact</a></li>
